build: optionally build with the GCR support
This will be useful for the PKCS#11 token support.

Unfortunatelly, GCR API is declared subject to change despite being in
active use and not having changed in years. This is not a problem --
if GCR ever deprecates this API, chances are it will provide a
certificate chooser too and we'll be just able to drop ours. It doesn't
seem like happening anytime soon.

Let's do an extensive check of how good the available GCR version is and
disable it if it's not good enough. We'll provide a sensible fallback
anyway.

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,7 +32,8 @@ DISTCHECK_CONFIGURE_FLAGS = \
 	--enable-introspection \
 	--enable-more-warnings=error \
 	--with-wwan \
-	--with-team
+	--with-team \
+	--with-gcr
 
 man_MANS =
 
@@ -528,13 +529,15 @@ src_libnma_libnma_la_CFLAGS = \
 	"-I$(srcdir)/src/libnma" \
 	$(GTK_CFLAGS) \
 	$(LIBNM_CFLAGS) \
-	$(GUDEV_CFLAGS)
+	$(GUDEV_CFLAGS) \
+	$(GCR_CFLAGS)
 
 src_libnma_libnma_la_LIBADD = \
 	src/wireless-security/libwireless-security-libnm.la \
 	$(GTK_LIBS) \
 	$(LIBNM_LIBS) \
-	$(GUDEV_LIBS)
+	$(GUDEV_LIBS) \
+	$(GCR_LIBS)
 
 EXTRA_src_libnma_libnma_la_DEPENDENCIES = src/libnma/libnma.ver
 
