--- a/configure.ac
+++ b/configure.ac
@@ -165,6 +165,76 @@ else
 fi
 AM_CONDITIONAL(WITH_JANSSON, test "${with_team}" != "no")
 
+dnl GCR for PKCS#11 enabled certificate chooser
+AC_ARG_WITH(gcr, AS_HELP_STRING([--with-gcr], [Enable advanced certificate chooser (default: auto)]))
+if (test "${with_gcr}" == "no"); then
+    have_gcr=no
+else
+    PKG_CHECK_MODULES(GCR,
+                      [gcr-3 >= 3.14, gck-1 >= 3.14],
+                      dnl GCR API is declared subject to change, do an extensive check of the prototypes
+                      GCR_CFLAGS="$GCR_CFLAGS -DGCR_API_SUBJECT_TO_CHANGE -DGCK_API_SUBJECT_TO_CHANGE"
+                      CFLAGS_SAVED="$CFLAGS"
+                      CFLAGS="$CFLAGS $GCR_CFLAGS"
+                      AC_MSG_CHECKING([for GCR usefulness])
+                      AC_COMPILE_IFELSE([AC_LANG_SOURCE([
+                                        #include <gcr/gcr.h>
+                                        #include <gck/gck.h>
+
+                                        const GckAttribute *gck_attributes_find (GckAttributes *attrs, gulong attr_type);
+                                        gboolean gck_attributes_find_string (GckAttributes *attrs, gulong attr_type, gchar **value);
+                                        gboolean gck_attributes_find_ulong (GckAttributes *attrs, gulong attr_type, gulong *value);
+                                        GckAttributes *gck_attributes_new_empty (gulong first_type, ...);
+                                        void gck_attributes_unref (gpointer attrs);
+                                        void gck_builder_add_all (GckBuilder *builder, GckAttributes *attrs);
+                                        void gck_builder_add_only (GckBuilder *builder, GckAttributes *attrs, gulong only_type, ...);
+                                        GckAttributes *gck_builder_end (GckBuilder *builder);
+                                        GckBuilder *gck_builder_new (GckBuilderFlags flags);
+                                        void gck_enumerator_next_async (GckEnumerator *self, gint max_objects, GCancellable *cancellable,
+                                                                        GAsyncReadyCallback callback, gpointer user_data);
+                                        GList *gck_enumerator_next_finish (GckEnumerator *self, GAsyncResult *result, GError **error);
+                                        void gck_list_unref_free (GList *reflist);
+                                        GList *gck_modules_get_slots (GList *modules, gboolean token_present);
+                                        void gck_modules_initialize_registered_async (GCancellable *cancellable, GAsyncReadyCallback callback,
+                                                                                      gpointer user_data);
+                                        GList *gck_modules_initialize_registered_finish (GAsyncResult *result, GError **error);
+                                        void gck_object_get_async (GckObject *self, const gulong *attr_types, guint n_attr_types,
+                                                                   GCancellable *cancellable, GAsyncReadyCallback callback, gpointer user_data);
+                                        GckAttributes *gck_object_get_finish (GckObject *self, GAsyncResult *result, GError **error);
+                                        void gck_session_login_async (GckSession *self, gulong user_type, const guchar *pin,
+                                                                      gsize n_pin, GCancellable *cancellable,
+                                                                      GAsyncReadyCallback callback, gpointer user_data);
+                                        gboolean gck_session_login_finish (GckSession *self, GAsyncResult *result, GError **error);
+                                        GckSlotInfo *gck_slot_get_info (GckSlot *self);
+                                        GckTokenInfo *gck_slot_get_token_info (GckSlot *self);
+                                        void gck_slot_open_session_async (GckSlot *self, GckSessionOptions options, GCancellable *cancellable,
+                                                                          GAsyncReadyCallback callback, gpointer user_data);
+                                        GckSession *gck_slot_open_session_finish (GckSlot *self, GAsyncResult *result, GError **error);
+                                        void gck_token_info_free (GckTokenInfo *token_info);
+                                        gchar *gck_uri_build (GckUriData *uri_data, GckUriFlags flags);
+                                        void gck_uri_data_free (GckUriData *uri_data);
+                                        GckUriData *gck_uri_parse (const gchar *string, GckUriFlags flags, GError **error);
+                                        gchar *gcr_certificate_get_issuer_name (GcrCertificate *self);
+                                        gchar *gcr_certificate_get_subject_name (GcrCertificate *self);
+                                        GcrCertificate *gcr_simple_certificate_new (const guchar *data, gsize n_data);
+                                        ])],
+                                        have_gcr=yes,
+                                        have_gcr=no)
+                      AC_MSG_RESULT(${have_gcr})
+                      CFLAGS="$CFLAGS_SAVED",
+                      have_gcr=no);
+fi
+
+if (test "${have_gcr}" == "yes"); then
+     AC_DEFINE(WITH_GCR, 1, [Define if Gcr is available])
+else
+    if (test "${with_gcr}" == "yes"); then
+        AC_MSG_ERROR([gcr support was requested, but the gcr library is not available.])
+    fi
+    AC_DEFINE(WITH_GCR, 0, [Define if Gcr is available])
+fi
+AM_CONDITIONAL(WITH_GCR, test "${have_gcr}" == "yes")
+
 dnl Check for gobject introspection
 GOBJECT_INTROSPECTION_CHECK([0.9.6])
 
@@ -205,6 +275,7 @@ AC_OUTPUT
 
 echo ""
 echo "  Build legacy library libnm-gtk: --with-libnm-gtk=${with_libnm_gtk}"
+echo "  GCR: --with-gcr=$have_gcr"
 echo "  LTO: --enable-lto=$enable_lto"
 echo "  Linker garbage collection: --enable-ld-gc=$enable_ld_gc"
 echo ""
