--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -75,6 +75,7 @@ src/connection-editor/vpn-helpers.c
 src/ethernet-dialog.c
 [type: gettext/glade]src/gsm-unlock.ui
 [type: gettext/glade]src/info.ui
+src/libnma/nma-file-cert-chooser.c
 src/libnma/nma-mobile-providers.c
 src/libnma/nma-mobile-wizard.c
 src/libnma/nma-ui-utils.c
